--- a/.github/workflows/sequence.yml
+++ b/.github/workflows/sequence.yml
@@ -1,4 +1,4 @@
-name: Processes
+name: Processes Sequenced
 
 on:
   push:
@@ -28,6 +28,7 @@ jobs:
 
   Process2:
     runs-on: ubuntu-latest
+    needs: [Process1]
 
     steps:
       - name: Checkout Repository
@@ -47,7 +48,7 @@ jobs:
 
   Process3:
     runs-on: ubuntu-latest
-    needs: [Process1,Process2]
+    needs: [Process2]
 
     steps:
       - name: Checkout Repository
