--- a/.github/workflows/sequence.yml
+++ b/.github/workflows/sequence.yml
@@ -65,3 +65,43 @@ jobs:
           pip install -r requirements.txt
       - name: Run Process1
         run: python3 Py_scr/Process3.py
+
+  Process4:
+    runs-on: ubuntu-latest
+    needs: [ Process3 ]
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Run Process1
+        run: python3 Py_scr/Process4.py
+
+  Process5:
+    runs-on: ubuntu-latest
+    needs: [ Process4 ]
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Run Process1
+        run: python3 Py_scr/Process5.py
