--- a/.github/workflows/sequence.yml
+++ b/.github/workflows/sequence.yml
@@ -91,6 +91,9 @@ jobs:
     needs: [ Process4 ]
 
     steps:
+      - uses: de-vri-es/setup-git-credentials@v2
+        with:
+         credentials: ${{GITHUB_TOKEN}}
       - name: Checkout Repository
         uses: actions/checkout@v2
 
