--- a/.github/workflows/sequence.yml
+++ b/.github/workflows/sequence.yml
@@ -96,6 +96,9 @@ jobs:
          credentials: ${{GITHUB_TOKEN}}
       - name: Checkout Repository
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          ref: main
 
       - name: Set up Python
         uses: actions/setup-python@v2
